# crator

./: .gitignore  .gitmodules  CMakeLists.txt  bpmdetection.cpp  bpmdetection.hpp  chunker.cpp  chunker.hpp  crator.cpp  energy.cpp  energy.hpp  energychunks.cpp  energychunks.hpp  essentiastandardalgorithmwrapper.cpp  essentiastandardalgorithmwrapper.hpp  monoloader.cpp  monoloader.hpp  monowriter.cpp  monowriter.hpp  shaderloader.cpp  shaderloader.hpp  visualizerwidget.cpp  visualizerwidget.hpp  visualizerwindow.cpp  visualizerwindow.hpp  visualizerwindow.ui  waveformalgorithm.cpp  waveformalgorithm.hpp  ziprange.hpp
shaders/: waveform.frag
